Update UPGRADE_REPORT.md with dependency upgrades and test results
Co-Authored-By: bainpschroeder <bainpschroeder@gmail.com>